--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,9 @@
 <body>
 <header>
     <nav class="navbar navbar-light bg-light">
+        <h1>Миссия Колонизация Марса</h1>
         <a class="navbar-brand" href="#">Mars One</a>
+        <h4>И на Марсе будут яблони цвести!</h4>
     </nav>
 </header>
 <!-- Begin page content -->
